[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/board/tile-normal.png" type="Texture" id=1]
[ext_resource path="res://scenes/uiboard/Battlefield.gd" type="Script" id=2]
[ext_resource path="res://assets/board/tile-spawn-red.png" type="Texture" id=3]
[ext_resource path="res://assets/board/paths.png" type="Texture" id=4]
[ext_resource path="res://assets/board/tile-base-red.png" type="Texture" id=5]

[node name="Battlefield" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 160.0
margin_top = 68.0
margin_right = 480.0
margin_bottom = 292.0
texture = ExtResource( 4 )

[node name="Tile1" type="TextureRect" parent="TextureRect"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="Tile2" type="TextureRect" parent="TextureRect"]
margin_left = 56.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 24.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Tile3" type="TextureRect" parent="TextureRect"]
margin_left = 104.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 24.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tile4" type="TextureRect" parent="TextureRect"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tile5" type="TextureRect" parent="TextureRect"]
margin_left = 202.0
margin_top = 8.0
margin_right = 218.0
margin_bottom = 24.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tile6" type="TextureRect" parent="TextureRect"]
margin_left = 248.0
margin_top = 8.0
margin_right = 264.0
margin_bottom = 24.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tile7" type="TextureRect" parent="TextureRect"]
margin_left = 290.0
margin_right = 322.0
margin_bottom = 32.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="TextureRect/Tile1" to="." method="_on_Tile1_gui_input"]
[connection signal="gui_input" from="TextureRect/Tile2" to="." method="_on_Tile2_gui_input"]
[connection signal="gui_input" from="TextureRect/Tile3" to="." method="_on_Tile3_gui_input"]
[connection signal="gui_input" from="TextureRect/Tile4" to="." method="_on_Tile3_gui_input"]
[connection signal="gui_input" from="TextureRect/Tile5" to="." method="_on_Tile3_gui_input"]
[connection signal="gui_input" from="TextureRect/Tile6" to="." method="_on_Tile3_gui_input"]
[connection signal="gui_input" from="TextureRect/Tile7" to="." method="_on_Tile1_gui_input"]
